--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -3,8 +3,8 @@
     ng-submit="login()"
     novalidate>
 
-    <h1>Hi there!</h1>
-    <p>Log-in to access the awesomeness!</p>
+    <h1>Let's Start Something</h1>
+    <p>Log-in to request collaboration and feedback</p>
 
     <input type="email" name="email" placeholder="Email"
       ng-model="user.email" ng-required="true">
