Added character to 140 limit

--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -6,6 +6,8 @@
     <h1>Let's Start Something</h1>
     <p>Log-in to request collaboration and feedback</p>
 
+    <!--<p class="error formerror" ng-show="messege">{{ messege }}</p>-->
+
     <input type="email" name="email" placeholder="Email"
       ng-model="user.email" ng-required="true">
     <p class="error validationerror"
