--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,6 +1,6 @@
 <div class="table">
   <ul>
-    <li class="branding"><a ng-href="#/">The Iron Yard | <span>Start Up Group</span></a></li>
+    <li class="branding"><a ng-href="#/">The Iron Yard | <span>Commenting App</span></a></li>
     <li><a ng-href="#/meetings">Comments</a></li>
     <li><a ng-href="#/login">Login</a></li>
     <li><a ng-href="#/register">Register</a></li>
